--- a/styles/iocad.css
+++ b/styles/iocad.css
@@ -17,15 +17,9 @@
     justify-content: space-around;
 }
 .iocad_discription_div {
-    color: #f8f172;
+    color: #d4d8d5;
     text-align: center;
-    max-width: 40%;
     margin: 20px;
-}
-@media screen and (max-width: 932px) {
-    .iocad_discription_div {
-        max-width: 80%;
-    }
 }
 .iocad_model_div {
     margin: 20px;
@@ -44,15 +38,4 @@
     top: 0px;
     width: 480px;
     height: 263px;
-}
-@media screen and (max-width: 500px) {
-    .iocad_model {
-        max-width: 80%;
-    }
-    .iocad_model_div {
-        max-width: 80%;
-    }
-    .iocad_picture {
-        max-width: 80%;
-    }
 }
