--- a/styles/downloadButton.css
+++ b/styles/downloadButton.css
@@ -13,6 +13,7 @@
     z-index: 0;
     border-radius: 10px;
     font-size: 30px;
+    user-select: none;
 }
 
 .download_button:before {
@@ -37,9 +38,8 @@
 }
 
 .download_button:active:after {
-    background: transparent;
+    background: #020221;
 }
-
 
 .download_button:after {
     z-index: -1;
@@ -47,11 +47,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #020221;
+    
     left: 0;
     top: 0;
     border-radius: 10px;
     opacity: 30%;
+    background: transparent;
 }
 
 @keyframes glowing {
