--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,20 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:'Courier New', Courier, monospace;
+  color: #d4d8d5;
+  font-size: 100%;
+}
+h1 {
+  font-size: 3.5em;
+}
+
+h2 {
+  font-size: 2.875em;
+}
+
+p {
+  font-size: 1.275em;
 }
 
 a {
@@ -13,4 +25,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+#tsparticles {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
 }
